objects/SAP_Product_Information__c.object
<CustomObject>
    <fields>
        <fullName>CE_Approved__c</fullName>
        <label>CE Approved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Control</label>
        <referenceTo>CMPL123QMS__Change_Control__c</referenceTo>
        <relationshipLabel>SAP Product Information</relationshipLabel>
        <relationshipName>SAP_Product_Information</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commercialization_Coverage__c</fullName>
        <label>Commercialization Coverage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Trade_Identification_Number__c</fullName>
        <label>Global Trade Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Manufacturer__c</fullName>
        <label>Legal Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make_or_Buy__c</fullName>
        <label>Make or Buy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Item_Description__c</fullName>
        <label>Product Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Item_Number__c</fullName>
        <label>Product Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Range__c</fullName>
        <label>Product Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Responsible__c</fullName>
        <label>Site Responsible</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Type__c</fullName>
        <label>Trade Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SAP Product Information</label>
    <nameField>
        <displayFormat>SAPPI-{000000000}</displayFormat>
        <label>SAP Product Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAP Product Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>